@@ -2,8 +2,8 @@ require 'abstract_unit'
 
 class NumericExtTimeAndDateTimeTest < Test::Unit::TestCase
   def setup
-    @now = Time.now
-    @dtnow = DateTime.now
+    @now = Time.local(2005,2,10,15,30,45)
+    @dtnow = DateTime.civil(2005,2,10,15,30,45)
     @seconds = {
       1.minute   => 60,
       10.minutes => 600,
